# PinnZoo

./: .gitignore  CMakeLists.txt  Manifest.toml  Project.toml  README.md  f.c  go1.urdf
docs/: Project.toml  index.html  make.jl
docs/src/: index.md
meshes/: hip.stl  thigh.stl
models/biped/: bolt.urdf  generate.py
models/cartpole/: README.md  cartpole.jl  cartpole.urdf  generate.py  test.jl
models/cartpole/generated_code/: C_func.c  C_func.h  M_func.c  M_func.h  dynamics.c  dynamics.h  dynamics_deriv.c  dynamics_deriv.h  forward_dynamics.c  forward_dynamics.h  forward_dynamics_deriv.c  forward_dynamics_deriv.h  inverse_dynamics.c  inverse_dynamics.h  inverse_dynamics_deriv.c  inverse_dynamics_deriv.h  kinematics.c  kinematics.h  kinematics_axis.c  kinematics_force_jacobian.c  kinematics_force_jacobian.h  kinematics_jacobian.c  kinematics_rotation.c  kinematics_velocity.c  kinematics_velocity.h  kinematics_velocity_jacobian.c  kinematics_velocity_jacobian.h  vector_orders.c  velocity_kinematics.c  velocity_kinematics_T.c  velocity_kinematics_T_jvp_deriv.c  velocity_kinematics_jvp_deriv.c
models/crazydog/: crazydog.jl  crazydog.xml  crazydog_8dof.urdf  crazydog_scene.xml  generate.py
models/crazydog/generated_code/: C_func.c  C_func.h  M_func.c  M_func.h  dynamics.h  dynamics_deriv.c  dynamics_deriv.h  forward_dynamics.c  inverse_dynamics_deriv.c  inverse_dynamics_deriv.h  kinematics_force_jacobian.c  kinematics_jacobian.c  vector_orders.c  velocity_kinematics.c  velocity_kinematics_T_jvp_deriv.c  velocity_kinematics_T_jvp_deriv.h  velocity_kinematics_jvp_deriv.c
models/double_cartpole/: double_cartpole.jl  double_cartpole.urdf  generate.py
models/double_cartpole/generated_code/: C_func.c  C_func.h  M_func.c  M_func.h  dynamics.c  dynamics.h  dynamics_deriv.c  dynamics_deriv.h  forward_dynamics.c  forward_dynamics.h  forward_dynamics_deriv.c  forward_dynamics_deriv.h  inverse_dynamics.c  inverse_dynamics.h  inverse_dynamics_deriv.c  inverse_dynamics_deriv.h  kinematics.c  kinematics.h  kinematics_axis.c  kinematics_force_jacobian.c  kinematics_force_jacobian.h  kinematics_jacobian.c  kinematics_jacobian.h  kinematics_rotation.c  kinematics_velocity.c  kinematics_velocity.h  kinematics_velocity_jacobian.c  kinematics_velocity_jacobian.h  vector_orders.c  velocity_kinematics.c  velocity_kinematics.h  velocity_kinematics_T.c  velocity_kinematics_T_jvp_deriv.c  velocity_kinematics_jvp_deriv.c
models/double_pendulum/: double_pendulum.jl  double_pendulum.urdf  generate.py
models/double_pendulum/generated_code/: C_func.c  C_func.h  M_func.c  M_func.h  dynamics.c  dynamics.h  dynamics_deriv.c  dynamics_deriv.h  forward_dynamics.c  forward_dynamics.h  forward_dynamics_deriv.c  forward_dynamics_deriv.h  inverse_dynamics.c  inverse_dynamics_deriv.c  inverse_dynamics_deriv.h  kinematics.c  kinematics.h  kinematics_axis.c  kinematics_force_jacobian.c  kinematics_force_jacobian.h  kinematics_jacobian.c  kinematics_rotation.c  kinematics_velocity.c  kinematics_velocity_jacobian.c  kinematics_velocity_jacobian.h  vector_orders.c  velocity_kinematics_T.h  velocity_kinematics_T_jvp_deriv.c  velocity_kinematics_T_jvp_deriv.h  velocity_kinematics_jvp_deriv.c  velocity_kinematics_jvp_deriv.h
models/nadia/: README.md  generate.py  jon_nadia_dynamics.py  nadia.jl  nadiaV17.fullRobot.simpleKnees.cycloidArms_mj.urdf  nadiaV17.fullRobot.simpleKnees.fixedArmsSpine_mj.urdf  nadiaV17.fullRobot.simpleKnees.fixedArms_mj.urdf
models/pendulum/: generate.py  pendulum.jl  pendulum.urdf
models/pendulum/generated_code/: C_func.c  C_func.h  M_func.c  M_func.h  dynamics.c  dynamics.h  dynamics_deriv.c  dynamics_deriv.h  forward_dynamics.c  forward_dynamics.h  forward_dynamics_deriv.c  forward_dynamics_deriv.h  inverse_dynamics.c  inverse_dynamics.h  inverse_dynamics_deriv.c  inverse_dynamics_deriv.h  kinematics.c  kinematics.h  kinematics_axis.c  kinematics_force_jacobian.c  kinematics_force_jacobian.h  kinematics_jacobian.c  kinematics_jacobian.h  kinematics_rotation.c  kinematics_velocity.c  kinematics_velocity.h  kinematics_velocity_jacobian.c  vector_orders.c  velocity_kinematics.c  velocity_kinematics.h  velocity_kinematics_T.c  velocity_kinematics_T.h  velocity_kinematics_T_jvp_deriv.c  velocity_kinematics_jvp_deriv.c  velocity_kinematics_jvp_deriv.h
models/pineapple/: generate.py  pineapple.jl  pineapple_6dof.urdf  pineapple_6dof.xml  pineapple_6dof_scene.xml  pineapple_8dof.urdf  pineapple_8dof.xml
models/pineapple1/: generate.py  pineapple1.jl  pineapple1.urdf  pineapple1.xml  pineapple1_scene.xml
models/pineapple1/generated_code/: C_func.c  dynamics.c  dynamics_deriv.c  forward_dynamics.c  forward_dynamics_deriv.c  kinematics.c  kinematics_force_jacobian.c  kinematics_jacobian.c  kinematics_velocity.c  vector_orders.c  velocity_kinematics.h  velocity_kinematics_T.c
models/quadrotor/: generate.py  quadrotor.jl  quadrotor.urdf
models/quadrotor/generated_code/: C_func.c  C_func.h  M_func.c  M_func.h  dynamics.c  dynamics.h  dynamics_deriv.c  dynamics_deriv.h  forward_dynamics.c  forward_dynamics.h  forward_dynamics_deriv.c  forward_dynamics_deriv.h  inverse_dynamics.c  inverse_dynamics.h  (+19 more)
models/unitree_go1/: generate.py  go1.jl  go1.urdf
models/unitree_go2/: README.md  generate.py  go2.jl  go2.urdf
src/: CMakeLists.txt  C_func.c  M_func.c  PinnZoo.jl  biped.jl  dynamics.jl  forward_dynamics.c  forward_dynamics.h  generate.py  inverse_dynamics.c  kinematics.jl  model_macro.jl  quadruped.jl  quaternions.jl  symbolic_generator.py  test.ipynb  test.jl  test.py  vector_orders.jl  wrapper.c
src/forward_diff/: README.md  dynamics.jl  kinematics.jl
src/generated_code/: C_func.h  M_func.c  dynamics.c  dynamics.h  inverse_dynamics.c  inverse_dynamics.h  inverse_dynamics_deriv.c  kinematics.h  kinematics_jacobian.c  velocity_kinematics.c  velocity_kinematics_T.c  velocity_kinematics_T_jvp_deriv.c  velocity_kinematics_jvp_deriv.c
test/: Project.toml  default_func_tests.jl  forward_diff_tests.jl  nadia_contact_residual_tests.jl  runtests.jl  test_nonunit_quaternions.jl
(+347 files in other folders)
